Bug 153437 - Cancelling insertion of a line insert a shift after column I
Summary: Cancelling insertion of a line insert a shift after column I
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.0 beta1+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Czeber László Ádám (NISZ)
URL:
Whiteboard: target:7.6.0 target:24.2.0 target:7.6...
Keywords: bibisected, bisected, regression
: 150052 154183 (view as bug list)
Depends on:
Blocks: Undo-Redo Calc-Cells
  Show dependency treegraph
 
Reported: 2023-02-07 13:09 UTC by jul
Modified: 2024-07-30 14:14 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Initial file (9.85 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2023-02-07 13:10 UTC, jul
Details
File after the issue (see line 131) (9.97 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2023-02-07 13:10 UTC, jul
Details
screenshot of the issue (78.66 KB, image/png)
2023-02-07 13:11 UTC, jul
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jul 2023-02-07 13:09:44 UTC
Description:
Opening an existing excel file, I insert a line under a pink colored line.
Then I do CtRL-Z.
The new line vanishes up to column I. After, it is still here, still colored.
I guess it is a formatting issue.

Steps to Reproduce:
1. Open file
2. insert a line under a colored line (ex : 131)
3. Undo

Actual Results:
The new line vanishes up to column I. After, it is still here, still colored

Expected Results:
The line is fully deleted


Reproducible: Always


User Profile Reset: No

Additional Info:
See screenshots for step by step exemple.
I've used LO on this computer less than 1 hour, so I guess and hope that the profil was not corrupted in such a short time.
Comment 1 jul 2023-02-07 13:10:27 UTC
Created attachment 185173 [details]
Initial file
Comment 2 jul 2023-02-07 13:10:58 UTC
Created attachment 185174 [details]
File after the issue (see line 131)
Comment 3 jul 2023-02-07 13:11:33 UTC
Created attachment 185175 [details]
screenshot of the issue
Comment 4 m_a_riosv 2023-02-07 18:13:02 UTC
Reproducible
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a834bbad8295cba0ca88a91a524aad48640271ec
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo

Seems that the restoration it's only up to the columns with data, adding some data on
Comment 5 m_a_riosv 2023-02-07 18:17:20 UTC
Doesn't happen with
Version: 7.3.7.2 (x64) / LibreOffice Community
Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL

First version for me with the issue.
Version: 7.4.0.3 (x86) / LibreOffice Community
Build ID: f85e47c08ddd19c015c0114a68350214f7066f5a
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-US (es_ES); UI: en-US Calc: CL
Comment 6 raal 2023-02-07 20:14:37 UTC
This seems to have begun at the below commit.
Adding Cc: to Luboš Luňák ; Could you possibly take a look at this one?
Thanks
 73ba34ca0f3aa921f7351d4aef714a7fadfd7335 is the first bad commit
commit 73ba34ca0f3aa921f7351d4aef714a7fadfd7335
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Thu May 19 00:30:14 2022 +0200

    source 2e86718626a07e1656661df3ad69a64848bf4614

https://git.libreoffice.org/core/+/2e86718626a07e1656661df3ad69a64848bf4614
Comment 7 Commit Notification 2023-05-31 09:50:59 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7be7e1ff95af485a9cb00748800d3d084f96387c

tdf#153437 sc: fix broken formatting at Undo of row/column insertion

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 NISZ LibreOffice Team 2023-06-02 07:22:51 UTC
Verified in:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 389a8d52d9961f89c0b2847b30ee1ca59a8fdc80
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 9 Commit Notification 2023-06-09 13:42:16 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dd8e061406fac581d399da088c7f0187278035dc

tdf#153437 sc: fix broken formatting without performance regression

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-06-12 10:22:05 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/c37e74949cf3cd11b701e4aea943aba4e8c1d4f8

tdf#153437 sc: fix broken formatting without performance regression

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Czeber László Ádám (NISZ) 2023-06-23 06:15:46 UTC
*** Bug 154183 has been marked as a duplicate of this bug. ***
Comment 12 stragu 2023-06-23 08:43:12 UTC
*** Bug 150052 has been marked as a duplicate of this bug. ***
Comment 13 stragu 2023-06-23 08:48:43 UTC
Luboš, Czeber and Xisco: any opinion on getting this regression fix into 7.5? Seeing the related symptoms in the duplicates, I think it makes sense.
Anyone willing to do the cherry-pick?
Comment 14 Xisco Faulí 2023-06-23 09:32:23 UTC
(In reply to Stéphane Guillou (stragu) from comment #13)
> Luboš, Czeber and Xisco: any opinion on getting this regression fix into
> 7.5? Seeing the related symptoms in the duplicates, I think it makes sense.
> Anyone willing to do the cherry-pick?

Done -> https://gerrit.libreoffice.org/c/core/+/153493
Comment 15 Commit Notification 2023-06-27 10:35:48 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/0692344caa7b79b7bef980326ede85ce5867631c

tdf#153437 sc: fix broken formatting at Undo of row/column insertion

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2023-06-27 20:37:09 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/93c6fdc58d577d059968a71ae08b80096f73ef1a

tdf#153437 sc: fix broken formatting without performance regression

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Xisco Faulí 2023-08-08 09:05:18 UTC
Hi Czeber László Ádám,
it seems the fixes for this issue has introduced https://crashreport.libreoffice.org/stats/signature/ScTable::DeleteCol(sc::ColumnSet%20const%20&,short,long,long,unsigned%20__int64,bool%20*) in 7.5.5. I'm trying to see how to reproduce the crash...
Comment 18 Xisco Faulí 2023-08-08 09:06:11 UTC
(In reply to Xisco Faulí from comment #17)
> Hi Czeber László Ádám,
> it seems the fixes for this issue has introduced
> https://crashreport.libreoffice.org/stats/signature/ScTable::DeleteCol(sc::
> ColumnSet%20const%20&,short,long,long,unsigned%20__int64,bool%20*) in 7.5.5.
> I'm trying to see how to reproduce the crash...

Nevermind, it seems to be related to bug 156286
Comment 19 Commit Notification 2024-07-30 14:14:47 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2b8071baaf3e72ca793560428a1b1bbdab71be2a

tdf#153437: sc_ucalc: Add similar test for columns

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.